# aurite-txtai

./: .cursorignore  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  ENVIRONMENT.md  GCLOUD.md  README.html  README.md  api_documentation.md  cloudbuild.yaml  config.json  documents  download.sh  dump.rdb  environment.yml  handler.sh  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.in  requirements.txt  run.sh  run_tests.sh  scoring  terminal  txtai-aurite.code-workspace  txtai-service.postman_collection.json  txtai-service.postman_environment.json
config/: config.py  config.yml
docs/: original_db_operations.md  txtapi_migration.md
info/: data.json  processed_data.json  txtai_routes.txt
notebooks/: 01_Introducing_txtai.ipynb  02_Build_an_Embeddings_index_with_Hugging_Face_Datasets.ipynb  03_Build_an_Embeddings_index_from_a_data_source.ipynb  05_Extractive_QA_with_txtai.ipynb  46_Whats_new_in_txtai_6_0.ipynb  49_External_database_integration.ipynb  56_External_vectorization.ipynb  59_Whats_new_in_txtai_7_0.ipynb  61_Integrate_txtai_with_Postgres.ipynb  64_Embeddings_index_format_for_open_data_access.ipynb  download.sh
notebooks/custom/: food_db.ipynb
notebooks/custom/embeddings/: 01_Embeddings_Overview.ipynb  02_Content_Storage.ipynb  03_Cloud_Storage.ipynb  04_Embeddings_Usage.ipynb  EMBEDDINGS.md
notebooks/custom/embeddings/txtai/test/memory/: config.json  documents
notebooks/custom/embeddings/txtai/test/sqlite/: config.json  documents  embeddings  scoring  scoring.terms
notebooks/custom/embeddings/txtai/test_index/: config.json  documents  embeddings  scoring  scoring.terms
notebooks/custom/food-index/: config.json  documents  embeddings
notebooks/custom/food-index/indexes/dense/: config.json  embeddings
notebooks/custom/food-index/indexes/sparse/: config.json
notebooks/custom/services/: 05_embeddings_service.ipynb
notebooks/custom/services/txtai/test/saved_index/: config.json  documents  scoring
notebooks/custom/services/txtai/test/test_index/: config.json  documents  embeddings  scoring.terms
notebooks/txtai_official/: 04_Add_semantic_search_to_Elasticsearch.ipynb  52_Build_RAG_pipelines_with_txtai.ipynb  62_RAG_with_llama_cpp_and_external_API_services.ipynb  63_How_RAG_with_txtai_works.ipynb
scripts/: check_gcp_auth.py  docker_setup.sh  export_env.sh  full_setup.sh  gcr_upload.sh  generate_token.py  git_upload.sh  init_db.py  init_db.sh  init_search.py  run_data_processor.sh  setup_txtai.sh  start_api.py  test_embeddings.py  test_streams.py  upload_and_run.sh  venv_setup.sh
src/: main.py  settings.py
src/config/: __init__.py  embeddings_config.py  settings.py  txtai_config.py
src/middleware/: auth.py  logging_config.py  secrets.py  security.py
src/models/: messages.py  txtai_types.py
src/routers/: embeddings.py
src/routes/: __init__.py  api.py  embeddings.py  embeddings_router.py  llm.py  llm_router.py  rag.py  rag_router.py  stream_router.py  test.py  test_router.py  trends.py
src/services/: SERVICE.md  __init__.py  base_service.py  communication_service.py  config_service.py  data_processing.py  embeddings_service.py  factory.py  llm_service.py  query_service.py  rag_service.py  registry.py  scheduler.py  stream_service.py  trends_service.py  txtai_service.py
src/services/core/: __init__.py  embeddings_service.py  llm_service.py  rag_service.py  txtai_service.py
src/services/data/cleaners/: sentiment_analyzer.py  text_cleaner.py
src/services/data/processors/: __init__.py  base_processor.py  cooking_processor.py  general_processor.py  technology_processor.py
src/services/data/retrievers/api_clients/: news_api.py
src/services/data/retrievers/scrapers/social_media/: reddit.py
src/services/data/visualizers/: data_viz.py
src/services/db/: client.py  models.py  operations.py  schema.sql
src/services/redis/: __init__.py  communication_service.py  stream_service.py  txtai_service.py
src/tests/: conftest.py  test_metadata_debug.py
src/tests/fixtures/: test_docs.py
src/tests/test_config/: test_embeddings_config.py  test_settings.py
src/tests/test_services/: test_communication.py  test_embeddings_service.py  test_llm_service.py  test_query_service.py  test_rag_service.py  test_service_integration.py  test_stream_service.py  test_txtai_service.py
symlinks/: .bashrc
test/: embeddings.test.py  test_api.py  test_embeddings.py  test_llm.py  test_trends.py
tests/: conftest.py
tests/db/: test_operations.py
tests/integration/api/: test_trends.py
tests/unit/services/db/: test_operations.py
txtai/index/: config.json  documents  embeddings  scoring  scoring.terms
utils/: build_log.txt  document_api.sh  document_gcp.sh  gcp_documentation.md  setup_gcp.sh  submit_build.sh  test_auth.sh  test_txtai.sh
