[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "txtai-service"
version = "0.1.0"
description = "txtai Service with GCS Storage"
dependencies = [
    "txtai[all]>=7.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-cloud-storage>=2.14.0",
    "python-multipart",
    "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-depends>=1.0.1",
    "pytest-ordering>=0.6",
    "pytest-xdist>=3.5.0",
    "ipykernel",
    "jupyter"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true